feat:单元测试配置

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mini-vue3-study",
   "version": "1.0.0",
-  "description": "<!--\r  * @Author: YauCheun 1272125039@qq.com\r  * @Date: 2024-02-24 11:43:18\r  * @LastEditors: YauCheun 1272125039@qq.com\r  * @LastEditTime: 2024-02-24 12:00:45\r  * @FilePath: \\mini-vue3-study\\README.md\r  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE\r -->\r # mini-vue3-study\r vue3的一些核心逻辑，实现一个vue3简易版（核心逻辑）框架。用来更好的理解vue3",
+  "description": "vue3的一些核心逻辑，实现一个vue3简易版（核心逻辑）框架。用来更好的理解vue3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/YauCheun/mini-vue3-study#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
