--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ typings/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
-
+.vscode
 # Optional REPL history
 .node_repl_history
 
@@ -105,3 +105,5 @@ dist
 .DS_Store
 
 lib/
+
+dist/
